[package]
name = "chess"
version = "0.1.0"
edition = "2021"
authors = ["A.D. Troelsen"]
description = "A chess game"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/LoZander/chess"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
